Used quarkus and Jdiameter